--- a/scripts/FigS8_distance_decay.Rmd
+++ b/scripts/FigS8_distance_decay.Rmd
@@ -1,11 +1,13 @@
 ---
-title: 'Figure S3: Distance decay'
+title: 'Figure S8: Distance decay'
 author: "Sofie Zacho Vestergaard"
 date: "2024-01-08"
 output: html_document
 ---
 
-
+```{r setup}
+knitr::opts_knit$set(root.dir = rprojroot::find_rstudio_root_file())
+```
 
 ```{r}
 library(ampvis2)
@@ -399,8 +401,8 @@ p_species <- plot_grid(p_AS_bray_species + labs(tag= 'B')+ theme(plot.tag = elem
 p <- p_genus + p_species
 
 
-ggsave(p,filename = "output/FigS3_DDR-ASall_Bray&Sor_gen_spp.jpeg", height = 7, width = 12.5)
-ggsave(p,filename = "output/FigS3_DDR-ASall_Bray&Sor_gen_spp.pdf", height = 7, width = 12.5,
+ggsave(p,filename = "output/FigS8_DDR-ASall_Bray&Sor_gen_spp.jpeg", height = 7, width = 12.5)
+ggsave(p,filename = "output/FigS8_DDR-ASall_Bray&Sor_gen_spp.pdf", height = 7, width = 12.5,
       useDingbats=FALSE, limitsize=FALSE)
 
 
