--- a/scripts/Fig06_distance_decay.Rmd
+++ b/scripts/Fig06_distance_decay.Rmd
@@ -151,7 +151,7 @@ p_AS_bray <- ggplot(data = dbs_bc , aes(x = geo_km, y = (1-community))) +
 
 ####Sørensen dist
 ```{r}
-#calculate distance matrix (Soerensen)
+#calculate distance matrix (Sørensen)
 dist.sor_AS = vegdist(ASabund2, method = "bray", binary = TRUE) 
 
 #mantel test
@@ -210,7 +210,7 @@ p_AS_Sor <- ggplot(data = dbs_sor, aes(x = geo_km, y = (1-community))) +
   scale_y_continuous(breaks = seq(0,1,0.2), limits=c(0,1)) +
   scale_x_continuous(breaks = seq(from = 0, to = 400, by = 50)) +
   xlab("Geographical distance (km)") + 
-  ylab("Soerensen similarity for ASVs") +
+  ylab("Sørensen similarity for ASVs") +
   theme_bw() +
   theme(legend.position = "right")
 
