--- a/scripts/FigS11_FigS12_geo_dis_selected_spp.Rmd
+++ b/scripts/FigS11_FigS12_geo_dis_selected_spp.Rmd
@@ -1,5 +1,5 @@
 ---
-title: 'Figure 7 + Figure S11: Geographical distribution'
+title: 'Figure S11 + S12: Geographical distribution'
 author: "Sofie Zacho Vestergaard"
 date: "2024-01-04"
 output: html_document
@@ -16,7 +16,6 @@ library(mapDK)
 library(cowplot)
 library(ggrepel)
 ```
-
 
 
 ```{r}
@@ -43,11 +42,8 @@ d_rep_filt_iww <- amp_subset_samples(d_rep_filt,
 d_rare_as <- amp_rarefy(d_rep_filt_as, rarefy = 10000) # 10 000
 d_rare_iww <- amp_rarefy(d_rep_filt_iww, rarefy = 100000) # 100 000 
 
-d_rare_as <- readRDS('output/amp_as_rarefied.rds')
-d_rare_iww <- readRDS('output/amp_iww_rarefied.rds')
 
 #normalise
-
 dasn <- normaliseTo100(d_rare_as)
 diwwn <- normaliseTo100(d_rare_iww)
 
@@ -275,17 +271,13 @@ epi_iww <- m + geom_point(data = heat_as_spp_t,
 
 ```{r}
 epi_plot <- epi_as + epi_iww
-ggsave(filename = "output/Fig07_epi.png",
+ggsave(filename = "output/FigS12_epi.png",
          epi_plot,
          width = 7, height = 3.3)
-ggsave(filename = "output/Fig07_epi.pdf", epi_plot,
+ggsave(filename = "output/FigS12_epi.pdf", epi_plot,
          width = 7, height = 3.3, useDingbats=FALSE, limitsize=FALSE)
 
 ```
-
-
-
-
 
 
 
